notificaciones funciaonal,falta probar todas las opciones