@@ -11,6 +11,7 @@ import org.springframework.http.HttpMethod;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.client.RestTemplate;
 
 import java.util.Arrays;
@@ -29,17 +30,15 @@ public class NotificacionViewController {
     public String listar(Model model, 
                         @org.springframework.web.bind.annotation.ModelAttribute("currentUserId") Object userId,
                         HttpServletRequest request) {
-        
-        if (userId != null) {
-            try {
-                String url = apiUrl + "/v1/notificaciones/usuario/" + userId;
-                Object[] arr = restTemplate.getForObject(url, Object[].class);
-                List<Object> notificaciones = arr != null ? Arrays.asList(arr) : List.of();
-                model.addAttribute("notificaciones", notificaciones);
-            } catch (Exception e) {
-                model.addAttribute("notificaciones", List.of());
-            }
-        } else {
+        System.out.println("DEBUG: Cargando buzón para userId: " + userId);
+        try {
+            String url = apiUrl + "/v1/notificaciones/me";
+            Object[] arr = restTemplate.getForObject(url, Object[].class);
+            List<Object> notificaciones = arr != null ? Arrays.asList(arr) : List.of();
+            System.out.println("DEBUG: Recibidas " + notificaciones.size() + " notificaciones del backend.");
+            model.addAttribute("notificaciones", notificaciones);
+        } catch (Exception e) {
+            System.err.println("Error al obtener notificaciones: " + e.getMessage());
             model.addAttribute("notificaciones", List.of());
         }
 
@@ -54,38 +53,38 @@ public class NotificacionViewController {
     }
 
     @PostMapping("/web/notificaciones/{id}/leer")
-    @ResponseBody
-    public String marcarComoLeida(@PathVariable Integer id) {
+    public ResponseEntity<String> marcarComoLeida(@PathVariable Integer id) {
         try {
             restTemplate.exchange(apiUrl + "/v1/notificaciones/" + id + "/leer", HttpMethod.PUT, null, Void.class);
-            return "";
+            org.springframework.http.HttpHeaders headers = new org.springframework.http.HttpHeaders();
+            headers.add("HX-Trigger", "notificacionLeida");
+            return new org.springframework.http.ResponseEntity<>("", headers, org.springframework.http.HttpStatus.OK);
         } catch (Exception e) {
-            return "Error";
+            return ResponseEntity.status(org.springframework.http.HttpStatus.INTERNAL_SERVER_ERROR).body("Error");
         }
     }
 
     @GetMapping("/web/notificaciones/count")
     @ResponseBody
     public String obtenerConteoNoLeidas(@org.springframework.web.bind.annotation.ModelAttribute("currentUserId") Object userId) {
-        if (userId != null) {
-            try {
-                Long count = restTemplate.getForObject(apiUrl + "/v1/notificaciones/usuario/" + userId + "/no-leidas/count", Long.class);
-                if (count != null && count > 0) {
-                    return "<span class='notification-badge'>" + count + "</span>";
-                }
-            } catch (Exception e) {}
-        }
+        try {
+            Long count = restTemplate.getForObject(apiUrl + "/v1/notificaciones/me/count", Long.class);
+            if (count != null && count > 0) {
+                return "<span class='notification-badge'>" + count + "</span>";
+            }
+        } catch (Exception e) {}
         return "";
     }
 
     @DeleteMapping("/web/notificaciones/{id}")
-    @ResponseBody
-    public String eliminar(@PathVariable Integer id) {
+    public ResponseEntity<String> eliminar(@PathVariable Integer id) {
         try {
             restTemplate.delete(apiUrl + "/v1/notificaciones/" + id);
-            return ""; 
+            org.springframework.http.HttpHeaders headers = new org.springframework.http.HttpHeaders();
+            headers.add("HX-Trigger", "notificacionLeida");
+            return new org.springframework.http.ResponseEntity<>("", headers, org.springframework.http.HttpStatus.OK);
         } catch (Exception e) {
-            return "Error";
+            return ResponseEntity.status(org.springframework.http.HttpStatus.INTERNAL_SERVER_ERROR).body("Error");
         }
     }
 }
